# voxeland_robot_perception

./: CMakeLists.txt  package.xml
launch/: ScanNet.launch.xml  semantic_mapping.launch.py  semantic_mapping.launch.xml
modules/: camera.py  data_standarization.py  pointclouds.py  semantics.py  transformations.py
rviz/: rgbd_nn_map.rviz
voxeland_robot_perception/: robot_perception_node.py
